unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fferpcore__ConfigurationItem__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration data used by FinancialForce processes.</description>
    <label>Foundations Configuration Item</label>
    <pluralLabel>Foundations Configuration Items</pluralLabel>
</CustomObject>