unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__Enabled__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the record is enabled.</description>
    <inlineHelpText>Indicates that the record is enabled.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>