unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__ItemKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ItemKey__c</fullName>
    <description>Identifier for this record or group of records.</description>
    <inlineHelpText>Identifier for this record or group of records.</inlineHelpText>
    <label>Identifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>