unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__ItemType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ItemType__c</fullName>
    <description>Name of the process that this Foundations configuration item relates to.</description>
    <inlineHelpText>Name of the process that this Foundations configuration item relates to.</inlineHelpText>
    <label>Process</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>