unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__SmallData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SmallData__c</fullName>
    <description>Data that defines the record's processes and does not exceed 255 characters. Querying this field does not contribute to query limits in Salesforce.</description>
    <inlineHelpText>Data that defines the record's processes and does not exceed 255 characters. Querying this field does not contribute to query limits in Salesforce.</inlineHelpText>
    <label>Small Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>