unpackaged/main/default/objects/fferpcore__ConfigurationItem__mdt/fields/fferpcore__SObjectType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SObjectType__c</fullName>
    <description>A Salesforce standard, custom, or platform event object that is used by the configuration item's processes. Defining the object ensures that it cannot be deleted.</description>
    <inlineHelpText>A Salesforce standard, custom, or platform event object that is used by the configuration item's processes. Defining the object ensures that it cannot be deleted.</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>FinancialForce Configuration Items</relationshipLabel>
    <relationshipName>FinancialForceConfigurationItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>